Add NBA Win Predictor HTML page with static visualizations and model results

--- a/index.html
+++ b/index.html
@@ -419,19 +419,19 @@
                 </div>
             </a>
             
-            <a href="nba_analysis/README.md" class="project-card nba">
+            <a href="nba_predictor.html" class="project-card nba">
                 <div class="card-preview">
                     <div class="preview-visual">🏀</div>
                 </div>
                 <div class="card-content">
                     <span class="card-tag">SPORTS ANALYTICS</span>
                     <h2>NBA Win Predictor</h2>
-                    <p>Analyze NBA point differential vs winning percentage with interactive Streamlit app, regression analysis, and early-season predictions.</p>
+                    <p>Analyze NBA point differential vs winning percentage with interactive charts, win predictions, and links to the full Streamlit app.</p>
                     <div class="card-footer">
                         <div class="tech-tags">
+                            <span class="tech-tag">Canvas</span>
+                            <span class="tech-tag">Charts</span>
                             <span class="tech-tag">Python</span>
-                            <span class="tech-tag">Streamlit</span>
-                            <span class="tech-tag">ML</span>
                         </div>
                         <span class="view-btn">
                             View Project
